k8s/base/ingress/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiap-videos-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
    - host: api.fiap-videos.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fiap-videos-api
                port:
                  number: 80
